# finite-element-networks

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: train.py
finite_element_networks/: __init__.py  data.py  domain.py  fen.py  mlp.py  ode_solver.py  plots.py  utils.py
finite_element_networks/lightning/: __init__.py  callbacks.py  metrics.py  regression.py  wandb.py
finite_element_networks/lightning/data/: __init__.py  black_sea.py  common.py  cylinder_flow.py  scalar_flow.py  utils.py
notebooks/: flow_fields_and_disentanglement.ipynb  forecasting_evaluation.ipynb
tests/: test_domain.py  test_mlp.py
